--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabry Amoruso Blockchain Developer</title>
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -19,9 +21,35 @@
                 <li><a href="#contact">Contact</a>
             </ul>    
     </header>
-    <h1>Gabiele Amoruso</h1>
-    Blockchain Developer Main Site
-    
+    <section class="showcase">
+        <div class="showcase-content">
+            <h1>Gabry Amoruso</h1>
+            <h3 class="blockquote-footer">Blockchain Developer</h3>
+            <a target="_blank" href="https://github.com/Gabry-BlockChain-Dvlp?tab=repositories" class="btn">Github</a>
+            <p>Welcome to my portfolio website! Here you can find my latest projects<br> and learn more about my skills and experience in blockchain development.</p>
+        </div>
+    </section>
+    <section class="about" id="about">
+        <div class="about-content">
+            <h2>About Me</h2>
+            <p>I am a blockchain developer with a strong background as a long-time user of blockchain ecosystems, spanning CEXs, DEXs, and the NFT market. Over time, my passion for the technology evolved into a focus on development, leading me to specialize in designing and implementing smart contracts that drive decentralized applications.
+
+Currently, I am actively working on projects that allow me to expand my expertise across different areas of blockchain development, from protocol-level logic to user-facing dApps. My goal is to grow into a well-rounded developer capable of contributing to robust, scalable, and secure Web3 solutions. This space showcases the milestones of my ongoing journey.</p>
+        </div>
+    </section>
+    <section class="projects" id="projects">
+        <div class="projects-content">
+            <h2>Projects</h2>
+            <div class="project-item">
+                <h3>Project 1</h3>
+                <p>Description of Project 1.</p>
+            </div>
+            <div class="project-item">
+                <h3>Project 2</h3>
+                <p>Description of Project 2.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
 
