Update project section in index.html and add new styles for project items in style.css

--- a/index.html
+++ b/index.html
@@ -39,14 +39,21 @@ Currently, I am actively working on projects that allow me to expand my expertis
     </section>
     <section class="projects" id="projects">
         <div class="projects-content">
-            <h2>Projects</h2>
-            <div class="project-item">
-                <h3>Project 1</h3>
-                <p>Description of Project 1.</p>
+            <div style="display: flex; flex-direction: column; align-items: center;">
+                <h2 style="margin-top: 0;">Projects</h2>
             </div>
-            <div class="project-item">
-                <h3>Project 2</h3>
-                <p>Description of Project 2.</p>
+            <div class="project-item1">
+                <div class="Description">
+                <h3>N°0 Food Waste</h3>
+                <p>This project is a smart contract developed in Solidity for a decentralized application aimed at reducing food waste by connecting surplus food from restaurants with local charities.</p>
+                </div>
+            </div>
+            <div class="project-item2">
+                <div class="Description">
+                <h3>Ethereum Protocols</h3>
+                <p>This project is a comprehensive exploration of Ethereum's core protocols, including consensus mechanisms, smart contract functionality, and layer 2 scaling solutions. <br>
+                 NFT marketplaces and their impact on the digital art landscape are also examined.</p>
+                 </div>
             </div>
         </div>
     </section>
