Add CV section with styles and images; restructure project section in index.html

--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@ Currently, I am actively working on projects that allow me to expand my expertis
         </div>
     </section>
     <section class="projects" id="projects">
-        <div class="projects-content">
-            <div style="display: flex; flex-direction: column; align-items: center;">
+        <div id="projects-content" class="grid text-center">
+            <div class="row">
                 <h2 style="margin-top: 0;">Projects</h2>
-            </div>
-            <div class="project-item1">
+            <div class="project-item1 col">
                 <div class="Description">
                 <h3>N°0 Food Waste</h3>
                 <p>This project is a smart contract developed in Solidity for a decentralized application aimed at reducing food waste by connecting surplus food from restaurants with local charities.</p>
                 </div>
             </div>
-            <div class="project-item2">
+            <div class="project-item2 col">
                 <div class="Description">
                 <h3>Ethereum Protocols</h3>
                 <p>This project is a comprehensive exploration of Ethereum's core protocols, including consensus mechanisms, smart contract functionality, and layer 2 scaling solutions. <br>
-                 NFT marketplaces and their impact on the digital art landscape are also examined.</p>
+                 NFT marketplaces and their impact on the digital art landscape.</p>
                  </div>
             </div>
+        </div>
         </div>
     </section>
 </body>
